--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <hr />
 
-    <h2>Mistura da casa - R$1,49</h2>
+    <h2>Mistura da casa Heyy - R$1,49</h2>
     <img src='imagens/cafe.jpg' width='110' height='110'>
     <p>Uma mistura <b>suave e delicada</b> de cafés do México, Brasil e Bolívia</p>
 
